--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
             <version>0.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>angular-material</artifactId>
+            <version>0.7.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
